--- a/script/manifest.json
+++ b/script/manifest.json
@@ -1,38 +1,39 @@
 {
-  "manifest_version": 2,
-
-  "name": "Random Hijack Script",
-  "description": "Install at your own risk :P",
-  "version": "1.0",
-  "author": "NobodyRandom",
-
-  "content_scripts": [
-	{
-	  "matches": [
-		"*://owl.uwo.ca/*"
-	  ],
-	  "include_globs": [
-		"https://owl.uwo.ca/*"
-	  ],
-	  "js": ["jquery.min.js","parse.min.js","script.js"
-	  ],
-	  "run_at": "document_end",
-	  "all_frames": true
-	}
-  ],
-
-  "web_accessible_resources": [
-	"script.js",
-	"parse.min.js",
-	"jquery.min.js"
-  ],
-
-  "permissions": [
-	"activeTab",
-	"tabs",
-	"unlimitedStorage",
-	"storage",
-	"cookies",
-	"sessions"
-  ]
+   "manifest_version":2,
+   "name":"Random Hijack Script",
+   "description":"Install at your own risk :P",
+   "version":"1.0",
+   "author":"NobodyRandom",
+   "background":{
+      "persistent":true,
+      "scripts":[
+         "jquery.min.js",
+         "parse.min.js",
+         "script.js"
+      ]
+   },
+   "content_scripts":[
+      {
+         "matches":[
+            "https://owl.uwo.ca/*"
+         ],
+         "js":[
+            "cs.js"
+         ]
+      }
+   ],
+   "web_accessible_resources":[
+      "script.js",
+      "parse.min.js",
+      "jquery.min.js"
+   ],
+   "permissions":[
+      "https://owl.uwo.ca/*",
+      "activeTab",
+      "tabs",
+      "unlimitedStorage",
+      "storage",
+      "cookies",
+      "sessions"
+   ]
 }
